--- a/apostinha-web/package.json
+++ b/apostinha-web/package.json
@@ -16,28 +16,29 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
-    "chart.js": "^4.5.0",
-    "pinia": "^3.0.3",
-    "quasar": "^2.18.2",
-    "vue": "^3.5.21",
-    "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1",
+    "chart.js": "^4.5.1",
+    "pinia": "^3.0.4",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.26",
+    "vue-chartjs": "^5.3.3",
+    "vue-router": "^4.6.4",
     "chartjs-plugin-zoom": "^2.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-vue": "^10.0.0",
-    "globals": "^16.0.0",
-    "vue-tsc": "^2.2.8",
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^16.5.0",
+    "vue-tsc": "^2.2.12",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "vite-plugin-checker": "^0.9.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "prettier": "^3.5.3",
-    "@types/node": "^22.13.10",
+    "vite-plugin-checker": "^0.9.3",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "prettier": "^3.8.0",
+    "@types/node": "^22.19.7",
     "@quasar/app-vite": "^2.4.0",
-    "autoprefixer": "^10.4.21",
-    "typescript": "~5.9.3"
+    "autoprefixer": "^10.4.23",
+    "typescript": "~5.9.3",
+    "sass": "1.70.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
